[JBR17] JBR-3768 HiDPI issues on Windows with JBR17
GitOrigin-RevId: 979c79d8d2d616c3f59fbdc3fd7cd564044ee30c