@@ -33,6 +33,7 @@ final class VmOptionsGenerator {
     '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
+    '--add-opens=java.desktop/sun.java2d=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
     '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED',
     '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED',
